--- a/src/swipe/index.less
+++ b/src/swipe/index.less
@@ -57,8 +57,8 @@
   &__indicator {
     width: calc(var(--swipe-indicator-size) * 2);
     height: calc(var(--swipe-indicator-size) * 2);
-    // background-color: @swipe-indicator-inactive-background-color;
-    background-color: #337EFF;
+    background-color: @swipe-indicator-inactive-background-color;
+    // background-color: #337EFF;
     border-radius: 100%;
     opacity: @swipe-indicator-inactive-opacity;
     transition: opacity @animation-duration-fast,
@@ -69,8 +69,8 @@
     }
 
     &--active {
-      // background-color: @swipe-indicator-active-background-color;
-      background-color: #337EFF;
+      background-color: @swipe-indicator-active-background-color;
+      // background-color: #337EFF;
       opacity: @swipe-indicator-active-opacity;
     }
   }
