feat: switch add van- 2

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -794,17 +794,17 @@
 );
 
 // Switch
-@switch-size: var(--switch-size);
-@switch-width: var(--switch-width);
-@switch-height: var(--switch-height);
-@switch-node-size: var(--switch-node-size);
-@switch-node-background-color: var(--switch-node-background-color);
+@switch-size: var(--van-switch-size);
+@switch-width: var(--van-switch-width);
+@switch-height: var(--van-switch-height);
+@switch-node-size: var(--van-switch-node-size);
+@switch-node-background-color: var(--van-switch-node-background-color);
 @switch-node-box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.05),
   0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 3px 3px 0 rgba(0, 0, 0, 0.05);
-@switch-background-color: var(--switch-background-color);
-@switch-on-background-color: var(--switch-on-background-color);
-@switch-transition-duration: var(--switch-transition-duration);
-@switch-disabled-opacity: var(--switch-disabled-opacity);
+@switch-background-color: var(--van-switch-background-color);
+@switch-on-background-color: var(--van-switch-on-background-color);
+@switch-transition-duration: var(--van-switch-transition-duration);
+@switch-disabled-opacity: var(--van-switch-disabled-opacity);
 
 // SwitchCell
 @switch-cell-padding-top: calc(@cell-vertical-padding - 1px);
