评分，滑块组件bug更改

--- a/src/slider/index.less
+++ b/src/slider/index.less
@@ -5,6 +5,8 @@
   justify-content: center;
   min-height: @slider-button-height;
   min-width: 100px;
+  padding: 0 calc(@slider-button-width / 2);
+  box-sizing: content-box;
 }
 .van-slider {
   position: relative;
