--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -147,10 +147,10 @@
   --button-info-border-color: var(
     --brand-primary
   ); /* @type color */ /* @desc 主要按钮边框颜色 */
-  --button-danger-color: #fff; /* @type color */ /* @desc 危险按钮边框颜色 */
+  --button-danger-color: #fff; /* @type color */ /* @desc 危险按钮文本颜色 */
   --button-danger-background-color: var(
     --brand-error
-  ); /* @type color */ /* @desc 危险按钮边框颜色 */
+  ); /* @type color */ /* @desc 危险按钮背景颜色 */
   --button-danger-border-color: var(
     --brand-error
   ); /* @type color */ /* @desc 危险按钮边框颜色 */
