--- a/src/style/var.less
+++ b/src/style/var.less
@@ -687,20 +687,20 @@
 @search-action-font-size: var(--search-action-font-size);
 
 // Sidebar
-@sidebar-width: var(--sidebar-width);
-@sidebar-font-size: var(--sidebar-font-size);
-@sidebar-line-height: var(--sidebar-line-height);
-@sidebar-text-color: var(--sidebar-text-color);
-@sidebar-disabled-text-color: var(--sidebar-disabled-text-color);
-@sidebar-padding: var(--sidebar-padding);
-@sidebar-active-color: var(--sidebar-active-color);
-@sidebar-background-color: var(--sidebar-background-color);
-@sidebar-selected-font-weight: var(--sidebar-selected-font-weight);
-@sidebar-selected-text-color: var(--sidebar-selected-text-color);
-@sidebar-selected-border-width: var(--sidebar-selected-border-width);
-@sidebar-selected-border-height: var(--sidebar-selected-border-height);
-@sidebar-selected-border-color: var(--sidebar-selected-border-color);
-@sidebar-selected-background-color: var(--sidebar-selected-background-color);
+@sidebar-width: var(--van-sidebar-width);
+@sidebar-font-size: var(--van-sidebar-font-size);
+@sidebar-line-height: var(--van-sidebar-line-height);
+@sidebar-text-color: var(--van-sidebar-text-color);
+@sidebar-disabled-text-color: var(--van-sidebar-disabled-text-color);
+@sidebar-padding: var(--van-sidebar-padding);
+@sidebar-active-color: var(--van-sidebar-active-color);
+@sidebar-background-color: var(--van-sidebar-background-color);
+@sidebar-selected-font-weight: var(--van-sidebar-selected-font-weight);
+@sidebar-selected-text-color: var(--van-sidebar-selected-text-color);
+@sidebar-selected-border-width: var(--van-sidebar-selected-border-width);
+@sidebar-selected-border-height: var(--van-sidebar-selected-border-height);
+@sidebar-selected-border-color: var(--van-sidebar-selected-border-color);
+@sidebar-selected-background-color: var(--van-sidebar-selected-background-color);
 
 // Skeleton
 @skeleton-row-height: 16px;
