docs: improve blockquote style

--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -44,7 +44,7 @@
   --van-doc-code-background: var(--van-doc-gray-1);
 
   // blockquote
-  --van-doc-blockquote-color: #4994df;
+  --van-doc-blockquote-color: #2f85da;
   --van-doc-blockquote-background: #ecf9ff;
 }
 
