--- a/src/step/index.less
+++ b/src/step/index.less
@@ -52,7 +52,7 @@
       left: -@padding-xs;
       z-index: 1;
       padding: 0 @padding-xs;
-      background-color: @white;
+      background-color: @steps-background-color;
       transform: translateY(-50%);
     }
 
