--- a/src/search/index.less
+++ b/src/search/index.less
@@ -31,7 +31,7 @@
     padding: 5px @padding-xs 5px 0;
     background-color: transparent;
 
-    &__left-icon {
+    .van-field__left-icon {
       color: @search-left-icon-color;
     }
   }
