进度条卡槽

--- a/src/progress/index.less
+++ b/src/progress/index.less
@@ -35,4 +35,11 @@
     border-radius: 1em;
     transform: translate(0, -50%);
   }
+  .custom {
+    position: absolute;
+    top: 50%;
+    box-sizing: border-box;
+    min-width: 4em;
+    transform: translate(0, -50%);
+  }
 }
