fix:bug tag标签 iconv

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -700,7 +700,9 @@
 @sidebar-selected-border-width: var(--van-sidebar-selected-border-width);
 @sidebar-selected-border-height: var(--van-sidebar-selected-border-height);
 @sidebar-selected-border-color: var(--van-sidebar-selected-border-color);
-@sidebar-selected-background-color: var(--van-sidebar-selected-background-color);
+@sidebar-selected-background-color: var(
+  --van-sidebar-selected-background-color
+);
 
 // Skeleton
 @skeleton-row-height: 16px;
@@ -850,6 +852,7 @@
 @tag-font-size: var(--tag-font-size);
 @tag-border-radius: var(--tag-border-radius);
 @tag-line-height: var(--tag-line-height);
+@tag-small-padding: var(--tag-small-padding);
 @tag-medium-padding: var(--tag-medium-padding);
 @tag-large-padding: var(--tag-large-padding);
 @tag-large-border-radius: var(--tag-large-border-radius);
