--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -668,6 +668,7 @@
   --tag-font-size: var(--font-size-sm); /* @hidden */
   --tag-border-radius: 2px; /* @desc 标签圆角 */
   --tag-line-height: 16px; /* @hidden */
+  --tag-small-padding: 0px 4px; /* @hidden */
   --tag-medium-padding: 2px 6px; /* @hidden */
   --tag-large-padding: var(--padding-base) var(--padding-xs); /* @desc 大标签内边距 */
   --tag-large-border-radius: var(--border-radius-md); /* @desc 大标签圆角 */
