--- a/src/style/normalize.less
+++ b/src/style/normalize.less
@@ -6,9 +6,9 @@ html {
 
 body {
   margin: 0;
-  font-family: @base-font-family;
-  font-size: @font-size-sm;
-  color: @text-color;
+  font-family: @base-font-family !important;
+  font-size: @font-size-sm !important;
+  color: @text-color !important;
 }
 
 a {
