fix: van-text theme refactor

--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -79,7 +79,7 @@
   ); /* @type color */ /* @desc 主要文本字体颜色,如：#223325 */
   --van-text-color-secondary: var(
     --van-font-second-color
-  ); /* @type color */ /* @desc 次要文本字体颜色,如：#223325 */
+  ); /* @type color */ /* @desc 次要文本字体颜色,如：#223325 */ /* @hidden */
   --van-text-color-success: var(
     --van-brand-success
   ); /* @type color */ /* @desc 成功文本字体颜色,如：#223325 */
