fix: van-text theme refactor 2

--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -77,9 +77,7 @@
   --van-text-color-primary: var(
     --van-brand-primary
   ); /* @type color */ /* @desc 主要文本字体颜色,如：#223325 */
-  --van-text-color-secondary: var(
-    --van-font-second-color
-  ); /* @type color */ /* @desc 次要文本字体颜色,如：#223325 */ /* @hidden */
+  --van-text-color-secondary: #666; /* @type color */ /* @desc 次要文本字体颜色,如：#223325 */ /* @hidden */
   --van-text-color-success: var(
     --van-brand-success
   ); /* @type color */ /* @desc 成功文本字体颜色,如：#223325 */
